--- a/book1.ipynb
+++ b/book1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2a69edb7-5c9d-4d10-81d4-1bd65590a2d6",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "21617278211378381//9007199254740992 + 3//1*im"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a8cdc297-30f9-4e6c-b38c-88d2dbdaaa59",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "5 + 13im"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "bca86de2-b361-495c-affd-2a55441439bb",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "π = 3.1415926535897..."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "6715a28d-e78c-4a64-88ae-0ae002be1ba8",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
        "4.718281828459045 + 3.0im"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "7a051e70-22e2-49c6-b144-e9910e607e75",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "0.0 + 1.2246467991473532e-16im"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "0a0218a6-b399-47e5-bfdb-0308e48a31d9",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
        "\"juliabookbookbookjulia\""
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "aa42fe98-ecc9-45d4-a1d9-38d6bd989957",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "125287.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "fc967a20-c6ed-4dd0-bc0e-54baa7d622be",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "1.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "id": "cbf801b2-d90b-40ed-b827-68049682d7bd",
    "metadata": {},
    "outputs": [
@@ -217,27 +217,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "id": "0e2bf8e0-16bf-44db-96e2-bdb413810827",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello! \n",
+      "hello! \n"
+     ]
+    }
+   ],
+   "source": [
+    "# now let's get functional...\n",
+    "function repeattwice(f, arg)\n",
+    "    f(arg)\n",
+    "    f(arg)\n",
+    "end\n",
+    "repeattwice(println,\"hello! \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d2d3bc8d-2eae-4817-ba3f-a13177f1b41d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"3.141592653589793\""
+       "2"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "17 ÷ 8\n",
+    "# WTF... https://docs.julialang.org/en/v1/manual/mathematical-operations/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d2d44972-0e3c-4e8b-b1a3-0647e8dae3c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "13/2 > 19 || 12/2 < 8 && false\n",
+    "# note the operator associativity "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c906cf5a-9def-4b2e-880f-d1a5fdfb8d90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This will execute\n",
+      "This will also execute\n"
+     ]
+    }
+   ],
+   "source": [
+    "if true\n",
+    "    println(\"This will execute\")\n",
+    "    if true\n",
+    "        println(\"This will also execute\")\n",
+    "    elseif true\n",
+    "        println(\"However, this will not\")\n",
+    "    elseif true\n",
+    "        println(\"... you get the point\")\n",
+    "    end\n",
+    "else\n",
+    "    println(\"This will not\")\n",
+    "end"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2d3bc8d-2eae-4817-ba3f-a13177f1b41d",
+   "id": "11b5b3ed-ab47-4a6b-adfe-3b9676d85323",
    "metadata": {},
    "outputs": [],
    "source": []
