--- a/book1.ipynb
+++ b/book1.ipynb
@@ -315,8 +315,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "11b5b3ed-ab47-4a6b-adfe-3b9676d85323",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of 1 to 1 = 1\n",
+      "Sum of 1 to 2 = 3\n",
+      "Sum of 1 to 3 = 6\n",
+      "Sum of 1 to 4 = 10\n",
+      "Sum of 1 to 5 = 15\n",
+      "Sum of 1 to 6 = 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "function sumof1ton(n)\n",
+    "    if n==1\n",
+    "        return 1\n",
+    "    else\n",
+    "        return n+sumof1ton(n-1)\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "function fibonacci(n)\n",
+    "    if n==1\n",
+    "        return 0\n",
+    "    elseif n==2\n",
+    "        return 1\n",
+    "    else\n",
+    "        return fibonacci(n-1) + fibonacci(n-2)\n",
+    "    end\n",
+    "end\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0ce9fdbe-9928-4297-9986-1701ad37b0bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of 1 to 1 = 1\n",
+      "Sum of 1 to 2 = 3\n",
+      "Sum of 1 to 3 = 6\n",
+      "Sum of 1 to 4 = 10\n",
+      "Sum of 1 to 5 = 15\n",
+      "Sum of 1 to 6 = 21\n",
+      "1-th Fibonacci number is 0\n",
+      "2-th Fibonacci number is 1\n",
+      "3-th Fibonacci number is 1\n",
+      "4-th Fibonacci number is 2\n",
+      "5-th Fibonacci number is 3\n",
+      "6-th Fibonacci number is 5\n",
+      "7-th Fibonacci number is 8\n",
+      "8-th Fibonacci number is 13\n",
+      "9-th Fibonacci number is 21\n",
+      "10-th Fibonacci number is 34\n",
+      "11-th Fibonacci number is 55\n",
+      "12-th Fibonacci number is 89\n",
+      "13-th Fibonacci number is 144\n",
+      "14-th Fibonacci number is 233\n",
+      "15-th Fibonacci number is 377\n",
+      "16-th Fibonacci number is 610\n",
+      "17-th Fibonacci number is 987\n",
+      "18-th Fibonacci number is 1597\n",
+      "19-th Fibonacci number is 2584\n",
+      "20-th Fibonacci number is 4181\n",
+      "21-th Fibonacci number is 6765\n",
+      "22-th Fibonacci number is 10946\n",
+      "23-th Fibonacci number is 17711\n",
+      "24-th Fibonacci number is 28657\n",
+      "25-th Fibonacci number is 46368\n",
+      "26-th Fibonacci number is 75025\n",
+      "27-th Fibonacci number is 121393\n",
+      "28-th Fibonacci number is 196418\n",
+      "29-th Fibonacci number is 317811\n",
+      "30-th Fibonacci number is 514229\n",
+      "31-th Fibonacci number is 832040\n",
+      "32-th Fibonacci number is 1346269\n",
+      "33-th Fibonacci number is 2178309\n",
+      "34-th Fibonacci number is 3524578\n",
+      "35-th Fibonacci number is 5702887\n",
+      "36-th Fibonacci number is 9227465\n",
+      "37-th Fibonacci number is 14930352\n",
+      "38-th Fibonacci number is 24157817\n",
+      "39-th Fibonacci number is 39088169\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i = 1 : 6\n",
+    "    println(\"Sum of 1 to \"*string(i)*\" = \"*string(sumof1ton(i)))\n",
+    "end\n",
+    "\n",
+    "\n",
+    "for i = 1:39\n",
+    "    println(string(i) * \"-th Fibonacci number is \" * string(fibonacci(i)))\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fd33eee-78cd-4bfe-b711-a750c2f777c2",
    "metadata": {},
    "outputs": [],
    "source": []
