--- a/book1.ipynb
+++ b/book1.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "0ce9fdbe-9928-4297-9986-1701ad37b0bf",
    "metadata": {},
    "outputs": [
@@ -378,36 +378,7 @@
       "7-th Fibonacci number is 8\n",
       "8-th Fibonacci number is 13\n",
       "9-th Fibonacci number is 21\n",
-      "10-th Fibonacci number is 34\n",
-      "11-th Fibonacci number is 55\n",
-      "12-th Fibonacci number is 89\n",
-      "13-th Fibonacci number is 144\n",
-      "14-th Fibonacci number is 233\n",
-      "15-th Fibonacci number is 377\n",
-      "16-th Fibonacci number is 610\n",
-      "17-th Fibonacci number is 987\n",
-      "18-th Fibonacci number is 1597\n",
-      "19-th Fibonacci number is 2584\n",
-      "20-th Fibonacci number is 4181\n",
-      "21-th Fibonacci number is 6765\n",
-      "22-th Fibonacci number is 10946\n",
-      "23-th Fibonacci number is 17711\n",
-      "24-th Fibonacci number is 28657\n",
-      "25-th Fibonacci number is 46368\n",
-      "26-th Fibonacci number is 75025\n",
-      "27-th Fibonacci number is 121393\n",
-      "28-th Fibonacci number is 196418\n",
-      "29-th Fibonacci number is 317811\n",
-      "30-th Fibonacci number is 514229\n",
-      "31-th Fibonacci number is 832040\n",
-      "32-th Fibonacci number is 1346269\n",
-      "33-th Fibonacci number is 2178309\n",
-      "34-th Fibonacci number is 3524578\n",
-      "35-th Fibonacci number is 5702887\n",
-      "36-th Fibonacci number is 9227465\n",
-      "37-th Fibonacci number is 14930352\n",
-      "38-th Fibonacci number is 24157817\n",
-      "39-th Fibonacci number is 39088169\n"
+      "10-th Fibonacci number is 34\n"
      ]
     }
    ],
@@ -417,15 +388,106 @@
     "end\n",
     "\n",
     "\n",
-    "for i = 1:39\n",
+    "for i = 1:10\n",
     "    println(string(i) * \"-th Fibonacci number is \" * string(fibonacci(i)))\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "5fd33eee-78cd-4bfe-b711-a750c2f777c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65533\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://en.wikipedia.org/wiki/Ackermann_function\n",
+    "# Its value grows rapidly, even for small inputs. \n",
+    "# For example, A(4, 2) is an integer of 19,729 decimal digits (equivalent to 2^65536 - 3)\n",
+    "\n",
+    "function Ackermann(m,n)\n",
+    "    #println(\"Called Ackermann with m=\"*string(m)*\",n=\"*string(n))\n",
+    "   if m==0\n",
+    "        return n+1\n",
+    "    elseif m>0 && n==0\n",
+    "        return Ackermann(m-1,1)\n",
+    "    else\n",
+    "        return Ackermann(m-1,Ackermann(m,n-1))\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "println(Ackermann(4,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "2af07eee-00f4-4986-9c4b-34ac65fff498",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r\n",
+      "e\n",
+      "t\n",
+      "y\n",
+      "p\n",
+      "u\n",
+      "j\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = \"jupyter\"\n",
+    "# decrementing for loop: https://stackoverflow.com/a/62444832\n",
+    "for i = length(s1):-1:1\n",
+    "    println(s1[i])\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "df734a7a-230d-494d-bf8e-037fc289d62c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sees is a palindrome : true\n",
+      "seek is a palindrome : true\n",
+      "never is a palindrome : true\n",
+      "neven is a palindrome : true\n"
+     ]
+    }
+   ],
+   "source": [
+    "function ispalindrome(s)\n",
+    "    return true\n",
+    "end\n",
+    "\n",
+    "\n",
+    "# test cases should cover: 1. odd and even lengths 2. palindromes and non-palindromes\n",
+    "ss = [\"sees\", \"seek\", \"never\", \"neven\"]\n",
+    "for i = 1:length(ss)\n",
+    "    println(ss[i]*\" is a palindrome : \"*string(ispalindrome(ss[i])))\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e66ffe83-69ec-4d00-afa2-54a2bf503d7e",
    "metadata": {},
    "outputs": [],
    "source": []
