--- a/book1.ipynb
+++ b/book1.ipynb
@@ -315,21 +315,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "11b5b3ed-ab47-4a6b-adfe-3b9676d85323",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sum of 1 to 1 = 1\n",
-      "Sum of 1 to 2 = 3\n",
-      "Sum of 1 to 3 = 6\n",
-      "Sum of 1 to 4 = 10\n",
-      "Sum of 1 to 5 = 15\n",
-      "Sum of 1 to 6 = 21\n"
-     ]
+     "data": {
+      "text/plain": [
+       "fibonacci (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -355,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "0ce9fdbe-9928-4297-9986-1701ad37b0bf",
    "metadata": {},
    "outputs": [
@@ -395,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "5fd33eee-78cd-4bfe-b711-a750c2f777c2",
    "metadata": {},
    "outputs": [
@@ -428,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "id": "2af07eee-00f4-4986-9c4b-34ac65fff498",
    "metadata": {},
    "outputs": [
@@ -456,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "id": "df734a7a-230d-494d-bf8e-037fc289d62c",
    "metadata": {},
    "outputs": [
@@ -465,20 +463,29 @@
      "output_type": "stream",
      "text": [
       "sees is a palindrome : true\n",
-      "seek is a palindrome : true\n",
-      "never is a palindrome : true\n",
-      "neven is a palindrome : true\n"
+      "seek is a palindrome : false\n",
+      "never is a palindrome : false\n",
+      "neven is a palindrome : true\n",
+      "able was i ere i saw elba is a palindrome : true\n"
      ]
     }
    ],
    "source": [
     "function ispalindrome(s)\n",
-    "    return true\n",
+    "    s_len = length(s)\n",
+    "    if s_len<=1\n",
+    "        return true\n",
+    "    else\n",
+    "        middle = s[2:s_len-1]\n",
+    "        first = s[1]\n",
+    "        last = s[s_len]\n",
+    "        return first==last && ispalindrome(middle)\n",
+    "    end\n",
     "end\n",
     "\n",
     "\n",
     "# test cases should cover: 1. odd and even lengths 2. palindromes and non-palindromes\n",
-    "ss = [\"sees\", \"seek\", \"never\", \"neven\"]\n",
+    "ss = [\"sees\", \"seek\", \"never\", \"neven\", \"able was i ere i saw elba\"]\n",
     "for i = 1:length(ss)\n",
     "    println(ss[i]*\" is a palindrome : \"*string(ispalindrome(ss[i])))\n",
     "end"
@@ -487,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e66ffe83-69ec-4d00-afa2-54a2bf503d7e",
+   "id": "0b5d0a58-029e-4462-a8c5-ecd434337556",
    "metadata": {},
    "outputs": [],
    "source": []
