--- a/book1.ipynb
+++ b/book1.ipynb
@@ -462,24 +462,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sees is a palindrome : true\n",
-      "seek is a palindrome : false\n",
-      "never is a palindrome : false\n",
-      "neven is a palindrome : true\n",
-      "able was i ere i saw elba is a palindrome : true\n"
+      "\"sees\" is a palindrome : true\n",
+      "\"seek\" is a palindrome : false\n",
+      "\"never\" is a palindrome : false\n",
+      "\"neven\" is a palindrome : true\n",
+      "\"able was i ere i saw elba\" is a palindrome : true\n"
      ]
     }
    ],
    "source": [
     "function ispalindrome(s)\n",
     "    s_len = length(s)\n",
+    "    \n",
+    "    # a string of size zero or one is by definition always palindrome\n",
+    "    # base case\n",
     "    if s_len<=1\n",
     "        return true\n",
     "    else\n",
-    "        middle = s[2:s_len-1]\n",
+    "        # middle will become empty for inputs with even length, and a single character for odd length\n",
+    "        middle = s[2:s_len-1] \n",
     "        first = s[1]\n",
     "        last = s[s_len]\n",
-    "        return first==last && ispalindrome(middle)\n",
+    "        return (first==last) && ispalindrome(middle)\n",
     "    end\n",
     "end\n",
     "\n",
@@ -487,14 +491,14 @@
     "# test cases should cover: 1. odd and even lengths 2. palindromes and non-palindromes\n",
     "ss = [\"sees\", \"seek\", \"never\", \"neven\", \"able was i ere i saw elba\"]\n",
     "for i = 1:length(ss)\n",
-    "    println(ss[i]*\" is a palindrome : \"*string(ispalindrome(ss[i])))\n",
+    "    println(\"\\\"\" * ss[i] * \"\\\" is a palindrome : \" * string(ispalindrome(ss[i])))\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b5d0a58-029e-4462-a8c5-ecd434337556",
+   "id": "49f826bd-6536-437d-855c-660e9262f135",
    "metadata": {},
    "outputs": [],
    "source": []
