--- a/book1.ipynb
+++ b/book1.ipynb
@@ -497,8 +497,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "49f826bd-6536-437d-855c-660e9262f135",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sqrt(10,1) : converged to 3.162277660168379 after 7 iterations, true value is 3.1622776601683795\n",
+      "Sqrt(11,1) : converged to 3.3166247903554 after 7 iterations, true value is 3.3166247903554\n",
+      "Sqrt(12,1) : converged to 3.4641016151377544 after 7 iterations, true value is 3.4641016151377544\n",
+      "Sqrt(13,1) : converged to 3.6055512754639896 after 7 iterations, true value is 3.605551275463989\n",
+      "Sqrt(14,1) : converged to 3.7416573867739413 after 7 iterations, true value is 3.7416573867739413\n",
+      "Sqrt(15,1) : converged to 3.872983346207417 after 7 iterations, true value is 3.872983346207417\n",
+      "Sqrt(16,1) : converged to 4.0 after 7 iterations, true value is 4.0\n",
+      "Sqrt(17,1) : converged to 4.123105625617661 after 7 iterations, true value is 4.123105625617661\n",
+      "Sqrt(18,1) : converged to 4.242640687119286 after 7 iterations, true value is 4.242640687119285\n",
+      "Sqrt(19,1) : converged to 4.358898943540673 after 7 iterations, true value is 4.358898943540674\n",
+      "Sqrt(20,1) : converged to 4.47213595499958 after 8 iterations, true value is 4.47213595499958\n",
+      "Sqrt(21,1) : converged to 4.58257569495584 after 8 iterations, true value is 4.58257569495584\n",
+      "Sqrt(22,1) : converged to 4.69041575982343 after 8 iterations, true value is 4.69041575982343\n",
+      "Sqrt(23,1) : converged to 4.795831523312719 after 8 iterations, true value is 4.795831523312719\n",
+      "Sqrt(24,1) : converged to 4.898979485566356 after 8 iterations, true value is 4.898979485566356\n",
+      "Sqrt(25,1) : converged to 5.0 after 8 iterations, true value is 5.0\n",
+      "Sqrt(26,1) : converged to 5.0990195135927845 after 8 iterations, true value is 5.0990195135927845\n",
+      "Sqrt(27,1) : converged to 5.196152422706632 after 8 iterations, true value is 5.196152422706632\n",
+      "Sqrt(28,1) : converged to 5.291502622129181 after 8 iterations, true value is 5.291502622129181\n",
+      "Sqrt(29,1) : converged to 5.385164807134505 after 8 iterations, true value is 5.385164807134504\n",
+      "Sqrt(30,1) : converged to 5.477225575051661 after 8 iterations, true value is 5.477225575051661\n",
+      "Sqrt(31,1) : converged to 5.567764362830022 after 8 iterations, true value is 5.5677643628300215\n",
+      "Sqrt(32,1) : converged to 5.65685424949238 after 8 iterations, true value is 5.656854249492381\n",
+      "Sqrt(33,1) : converged to 5.744562646538029 after 8 iterations, true value is 5.744562646538029\n",
+      "Sqrt(34,1) : converged to 5.830951894845301 after 8 iterations, true value is 5.830951894845301\n",
+      "Sqrt(35,1) : converged to 5.916079783099616 after 8 iterations, true value is 5.916079783099616\n",
+      "Sqrt(36,1) : converged to 6.0 after 8 iterations, true value is 6.0\n",
+      "Sqrt(37,1) : converged to 6.08276253029822 after 8 iterations, true value is 6.082762530298219\n",
+      "Sqrt(38,1) : converged to 6.164414002968977 after 8 iterations, true value is 6.164414002968976\n",
+      "Sqrt(39,1) : converged to 6.244997998398398 after 8 iterations, true value is 6.244997998398398\n",
+      "Sqrt(40,1) : converged to 6.324555320336758 after 8 iterations, true value is 6.324555320336759\n",
+      "Sqrt(41,1) : converged to 6.4031242374328485 after 8 iterations, true value is 6.4031242374328485\n",
+      "Sqrt(42,1) : converged to 6.48074069840786 after 8 iterations, true value is 6.48074069840786\n",
+      "Sqrt(43,1) : converged to 6.557438524302 after 8 iterations, true value is 6.557438524302\n",
+      "Sqrt(44,1) : converged to 6.6332495807108 after 8 iterations, true value is 6.6332495807108\n",
+      "Sqrt(45,1) : converged to 6.708203932499369 after 8 iterations, true value is 6.708203932499369\n",
+      "Sqrt(46,1) : converged to 6.782329983125268 after 8 iterations, true value is 6.782329983125268\n",
+      "Sqrt(47,1) : converged to 6.855654600401044 after 8 iterations, true value is 6.855654600401044\n",
+      "Sqrt(48,1) : converged to 6.928203230275509 after 8 iterations, true value is 6.928203230275509\n",
+      "Sqrt(49,1) : converged to 7.0 after 8 iterations, true value is 7.0\n",
+      "Sqrt(50,1) : converged to 7.0710678118654755 after 8 iterations, true value is 7.0710678118654755\n",
+      "Sqrt(51,1) : converged to 7.14142842854285 after 8 iterations, true value is 7.14142842854285\n",
+      "Sqrt(52,1) : converged to 7.211102550927979 after 8 iterations, true value is 7.211102550927978\n",
+      "Sqrt(53,1) : converged to 7.280109889280518 after 8 iterations, true value is 7.280109889280518\n",
+      "Sqrt(54,1) : converged to 7.3484692283495345 after 8 iterations, true value is 7.3484692283495345\n",
+      "Sqrt(55,1) : converged to 7.416198487095663 after 8 iterations, true value is 7.416198487095663\n",
+      "Sqrt(56,1) : converged to 7.483314773547883 after 8 iterations, true value is 7.483314773547883\n",
+      "Sqrt(57,1) : converged to 7.54983443527075 after 8 iterations, true value is 7.54983443527075\n",
+      "Sqrt(58,1) : converged to 7.615773105863909 after 8 iterations, true value is 7.615773105863909\n",
+      "Sqrt(59,1) : converged to 7.681145747868609 after 8 iterations, true value is 7.681145747868608\n",
+      "Sqrt(60,1) : converged to 7.745966692414834 after 8 iterations, true value is 7.745966692414834\n",
+      "Sqrt(61,1) : converged to 7.810249675906654 after 8 iterations, true value is 7.810249675906654\n",
+      "Sqrt(62,1) : converged to 7.874007874011811 after 8 iterations, true value is 7.874007874011811\n",
+      "Sqrt(63,1) : converged to 7.937253933193771 after 8 iterations, true value is 7.937253933193772\n",
+      "Sqrt(64,1) : converged to 8.0 after 8 iterations, true value is 8.0\n",
+      "Sqrt(65,1) : converged to 8.06225774829855 after 8 iterations, true value is 8.06225774829855\n",
+      "Sqrt(66,1) : converged to 8.12403840463596 after 8 iterations, true value is 8.12403840463596\n",
+      "Sqrt(67,1) : converged to 8.18535277187245 after 8 iterations, true value is 8.18535277187245\n",
+      "Sqrt(68,1) : converged to 8.246211251235321 after 8 iterations, true value is 8.246211251235321\n",
+      "Sqrt(69,1) : converged to 8.306623862918075 after 8 iterations, true value is 8.306623862918075\n",
+      "Sqrt(70,1) : converged to 8.366600265340756 after 8 iterations, true value is 8.366600265340756\n",
+      "Sqrt(71,1) : converged to 8.426149773176359 after 8 iterations, true value is 8.426149773176359\n",
+      "Sqrt(72,1) : converged to 8.485281374238571 after 9 iterations, true value is 8.48528137423857\n",
+      "Sqrt(73,1) : converged to 8.544003745317532 after 9 iterations, true value is 8.54400374531753\n",
+      "Sqrt(74,1) : converged to 8.602325267042627 after 9 iterations, true value is 8.602325267042627\n",
+      "Sqrt(75,1) : converged to 8.660254037844386 after 9 iterations, true value is 8.660254037844387\n",
+      "Sqrt(76,1) : converged to 8.717797887081346 after 9 iterations, true value is 8.717797887081348\n",
+      "Sqrt(77,1) : converged to 8.77496438739212 after 9 iterations, true value is 8.774964387392123\n",
+      "Sqrt(78,1) : converged to 8.831760866327848 after 9 iterations, true value is 8.831760866327848\n",
+      "Sqrt(79,1) : converged to 8.888194417315589 after 9 iterations, true value is 8.888194417315589\n",
+      "Sqrt(80,1) : converged to 8.94427190999916 after 9 iterations, true value is 8.94427190999916\n",
+      "Sqrt(81,1) : converged to 9.0 after 9 iterations, true value is 9.0\n",
+      "Sqrt(82,1) : converged to 9.055385138137417 after 9 iterations, true value is 9.055385138137417\n",
+      "Sqrt(83,1) : converged to 9.1104335791443 after 9 iterations, true value is 9.1104335791443\n",
+      "Sqrt(84,1) : converged to 9.16515138991168 after 9 iterations, true value is 9.16515138991168\n",
+      "Sqrt(85,1) : converged to 9.219544457292887 after 9 iterations, true value is 9.219544457292887\n",
+      "Sqrt(86,1) : converged to 9.273618495495704 after 9 iterations, true value is 9.273618495495704\n",
+      "Sqrt(87,1) : converged to 9.327379053088816 after 9 iterations, true value is 9.327379053088816\n",
+      "Sqrt(88,1) : converged to 9.38083151964686 after 9 iterations, true value is 9.38083151964686\n",
+      "Sqrt(89,1) : converged to 9.433981132056605 after 9 iterations, true value is 9.433981132056603\n",
+      "Sqrt(90,1) : converged to 9.486832980505138 after 9 iterations, true value is 9.486832980505138\n",
+      "Sqrt(91,1) : converged to 9.539392014169456 after 9 iterations, true value is 9.539392014169456\n",
+      "Sqrt(92,1) : converged to 9.591663046625438 after 9 iterations, true value is 9.591663046625438\n",
+      "Sqrt(93,1) : converged to 9.643650760992955 after 9 iterations, true value is 9.643650760992955\n",
+      "Sqrt(94,1) : converged to 9.695359714832659 after 9 iterations, true value is 9.695359714832659\n",
+      "Sqrt(95,1) : converged to 9.746794344808965 after 9 iterations, true value is 9.746794344808963\n",
+      "Sqrt(96,1) : converged to 9.797958971132712 after 9 iterations, true value is 9.797958971132712\n",
+      "Sqrt(97,1) : converged to 9.848857801796104 after 9 iterations, true value is 9.848857801796104\n",
+      "Sqrt(98,1) : converged to 9.899494936611665 after 9 iterations, true value is 9.899494936611665\n",
+      "Sqrt(99,1) : converged to 9.9498743710662 after 9 iterations, true value is 9.9498743710662\n",
+      "Sqrt(100,1) : converged to 10.0 after 9 iterations, true value is 10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://stackoverflow.com/questions/65629829/if-the-f-string-like-string-formatting-available-in-julia\n",
+    "\n",
+    "# Newton method for finding square root\n",
+    "function newton_sqrt(n, est)\n",
+    "    roots = Vector{Float64}()\n",
+    "    est1 = est\n",
+    "    i = 1\n",
+    "    while true\n",
+    "        #println(\"Iteration $i, estimate of sqrt($n) = $est1\")\n",
+    "        est1 = (1/2) * (est1 + n/est1)\n",
+    "        append!(roots, est1)\n",
+    "        if i>3\n",
+    "            delta = abs(roots[length(roots)] - roots[length(roots)-1])\n",
+    "            if delta<1e-12\n",
+    "                break\n",
+    "            end\n",
+    "        end\n",
+    "        i = i+1\n",
+    "    end\n",
+    "    truesqrt = sqrt(n)\n",
+    "    println(\"Sqrt($n,$est) : converged to $est1 after $i iterations, true value is $truesqrt\")\n",
+    "    return est1\n",
+    "end\n",
+    "\n",
+    "for i = 10:100\n",
+    "    newton_sqrt(i,1)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db88a3e4-becc-4a5b-8f68-2cd891daa0f3",
    "metadata": {},
    "outputs": [],
    "source": []
